# TrendForge

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  brands.py  campaigns.py  trends.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: redis.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/ai_agents/: __init__.py  base.py  brand_relevance.py  campaign_strategist.py  copy_generator.py  orchestrator.py  performance_heuristic.py  trend_classifier.py
backend/app/services/brand/: brand_service.py
backend/app/services/campaign/: campaign_service.py
backend/app/services/scraper/: social_scraper.py
backend/app/services/trends/: processor.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/brands/: page.tsx
frontend/src/app/dashboard/campaigns/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/lib/: api.ts
infrastructure/nginx/: nginx.conf
